--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Related all to dropdown button*/
 .dropbtn
 {
 	background-color: #3498DB;
@@ -36,3 +37,5 @@
 {
 	display: block;
 }
+
+/*Related all to image carousel*/
